--- a/client/src/app/sistema/sistema.component.html
+++ b/client/src/app/sistema/sistema.component.html
@@ -66,7 +66,7 @@
 
   <div class="box-list">
       <div class="title-card">
-        Pesquisar Sistema
+        Resultado da Consulta
       </div>
       <div>
 
