--- a/client/src/app/sistema/create/create.component.html
+++ b/client/src/app/sistema/create/create.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="box">
       <div class="title-card">
-        Pesquisar Sistema
+        Criar Sistema
       </div>
       <div>
         <div class="box-input">
